Reorganize display utilities across modules for better discoverability.

--- a/nbs/core/testing.ipynb
+++ b/nbs/core/testing.ipynb
@@ -272,7 +272,7 @@
     "            Div(\"Stat 2\", cls= combine_classes(p(padding_val), bg.yellow._100)),\n",
     "            \n",
     "            cls=combine_classes(\n",
-    "                display_tw.grid,\n",
+    "                grid_display,\n",
     "                grid_cols(3),\n",
     "                grid_rows(3),\n",
     "                gap(gap_val),\n",
@@ -317,6 +317,7 @@
    "source": [
     "# Import all utilities we'll use\n",
     "from fasthtml.common import *\n",
+    "from cjm_fasthtml_tailwind.utilities.accessibility import not_sr_only, sr_only\n",
     "from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import (\n",
     "    auto_cols, auto_rows, basis, col, col_end, col_span, col_start, \n",
     "    content, flex, flex_between, flex_center, flex_col_center, \n",
@@ -328,8 +329,8 @@
     "from cjm_fasthtml_tailwind.utilities.layout import (\n",
     "    aspect, bottom, box, box_decoration, break_util, center_absolute, \n",
     "    clear, columns, display_tw, end, float_tw, full_bleed, inset, \n",
-    "    isolation, left, not_sr_only, object_fit, object_position, \n",
-    "    overflow, overscroll, position, right, sr_only, stack_context, \n",
+    "    isolation, left, object_fit, object_position, \n",
+    "    overflow, overscroll, position, right, stack_context, \n",
     "    start, sticky_top, top, visibility, z\n",
     ")\n",
     "from cjm_fasthtml_tailwind.utilities.sizing import (\n",
@@ -386,76 +387,6 @@
      "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:    Exception in ASGI application\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/uvicorn/protocols/http/httptools_impl.py\", line 409, in run_asgi\n",
-      "    result = await app(  # type: ignore[func-returns-value]\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/uvicorn/middleware/proxy_headers.py\", line 60, in __call__\n",
-      "    return await self.app(scope, receive, send)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/applications.py\", line 113, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/middleware/errors.py\", line 186, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/middleware/errors.py\", line 164, in __call__\n",
-      "    await self.app(scope, receive, _send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/middleware/cors.py\", line 85, in __call__\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/middleware/sessions.py\", line 85, in __call__\n",
-      "    await self.app(scope, receive, send_wrapper)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/middleware/exceptions.py\", line 63, in __call__\n",
-      "    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/_exception_handler.py\", line 53, in wrapped_app\n",
-      "    raise exc\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/_exception_handler.py\", line 42, in wrapped_app\n",
-      "    await app(scope, receive, sender)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/routing.py\", line 716, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/routing.py\", line 736, in app\n",
-      "    await route.handle(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/routing.py\", line 290, in handle\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/routing.py\", line 78, in app\n",
-      "    await wrap_app_handling_exceptions(app, request)(scope, receive, send)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/_exception_handler.py\", line 53, in wrapped_app\n",
-      "    raise exc\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/_exception_handler.py\", line 42, in wrapped_app\n",
-      "    await app(scope, receive, sender)\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/routing.py\", line 75, in app\n",
-      "    response = await f(request)\n",
-      "               ^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/fasthtml/core.py\", line 599, in _f\n",
-      "    if not resp: resp = await _wrap_call(f, req, sig.parameters)\n",
-      "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/fasthtml/core.py\", line 456, in _wrap_call\n",
-      "    return await _handle(f, wreq)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/fasthtml/core.py\", line 233, in _handle\n",
-      "    return (await f(*args, **kwargs)) if is_async_callable(f) else await run_in_threadpool(f, *args, **kwargs)\n",
-      "                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/starlette/concurrency.py\", line 38, in run_in_threadpool\n",
-      "    return await anyio.to_thread.run_sync(func)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/anyio/to_thread.py\", line 56, in run_sync\n",
-      "    return await get_async_backend().run_sync_in_worker_thread(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/anyio/_backends/_asyncio.py\", line 2470, in run_sync_in_worker_thread\n",
-      "    return await future\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/home/innom-dt/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/anyio/_backends/_asyncio.py\", line 967, in run\n",
-      "    result = context.run(func, *args)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/tmp/ipykernel_20886/2098182806.py\", line 158, in index\n",
-      "    P(\"892\", cls=combine_classes(font_size._3xl, font_weight.bold, text.purple._600)),\n",
-      "                                                                   ^^^^\n",
-      "NameError: name 'text' is not defined\n"
-     ]
     }
    ],
    "source": [
@@ -477,7 +408,7 @@
     "            # Logo section\n",
     "            Div(\n",
     "                H1(\"Dashboard\", cls=combine_classes(font_size.xl, font_weight.bold, text_color.white)),\n",
-    "                cls=combine_classes(display_tw.flex, items.center)\n",
+    "                cls=combine_classes(flex_display, items.center)\n",
     "            ),\n",
     "            \n",
     "            # Navigation links\n",
@@ -486,7 +417,7 @@
     "                A(\"Analytics\", href=\"#\", cls=combine_classes(p.x(4), p.y(2), text_color.white, bg.blue._700.hover, rounded.full)),\n",
     "                A(\"Reports\", href=\"#\", cls=combine_classes(p.x(4), p.y(2), text_color.white, bg.blue._700.hover, rounded.full)),\n",
     "                A(\"Settings\", href=\"#\", cls=combine_classes(p.x(4), p.y(2), text_color.white, bg.blue._700.hover, rounded.full)),\n",
-    "                cls=combine_classes(display_tw.flex, gap(2))\n",
+    "                cls=combine_classes(flex_display, gap(2))\n",
     "            ),\n",
     "            \n",
     "            # User profile section\n",
@@ -494,7 +425,7 @@
     "                Div(\n",
     "                    Span(\"John Doe\", cls=text_color.white),\n",
     "                    Div(cls=combine_classes(square(10), bg.white, rounded.full)),\n",
-    "                    cls=combine_classes(display_tw.flex, items.center, gap(3))\n",
+    "                    cls=combine_classes(flex_display, items.center, gap(3))\n",
     "                ),\n",
     "                cls=combine_classes(m.l.auto)\n",
     "            ),\n",
@@ -529,7 +460,7 @@
     "                        \"Dashboard\",\n",
     "                        href=\"#\",\n",
     "                        cls=combine_classes(\n",
-    "                            display_tw.flex,\n",
+    "                            flex_display,\n",
     "                            items.center,\n",
     "                            p(4),\n",
     "                            bg.gray._100.hover,\n",
@@ -543,7 +474,7 @@
     "                        \"Users\",\n",
     "                        href=\"#\",\n",
     "                        cls=combine_classes(\n",
-    "                            display_tw.flex,\n",
+    "                            flex_display,\n",
     "                            items.center,\n",
     "                            p(4),\n",
     "                            bg.gray._100.hover,\n",
@@ -557,7 +488,7 @@
     "                        \"Settings\",\n",
     "                        href=\"#\",\n",
     "                        cls=combine_classes(\n",
-    "                            display_tw.flex,\n",
+    "                            flex_display,\n",
     "                            items.center,\n",
     "                            p(4),\n",
     "                            bg.gray._100.hover,\n",
@@ -616,8 +547,8 @@
     "                Div(\n",
     "                    Div(\n",
     "                        H3(\"Active Sessions\", cls=combine_classes(text_color.gray._600, font_size.sm)),\n",
-    "                        P(\"892\", cls=combine_classes(font_size._3xl, font_weight.bold, text.purple._600)),\n",
-    "                        P(\"↓ 3.1%\", cls=combine_classes(text.red._500, font_size.sm)),\n",
+    "                        P(\"892\", cls=combine_classes(font_size._3xl, font_weight.bold, text_color.purple._600)),\n",
+    "                        P(\"↓ 3.1%\", cls=combine_classes(text_color.red._500, font_size.sm)),\n",
     "                        cls=pad(x=6, y=4)\n",
     "                    ),\n",
     "                    cls=combine_classes(bg.white, rounded.lg, shadow(), overflow.hidden)\n",
@@ -627,7 +558,7 @@
     "                Div(\n",
     "                    Div(\n",
     "                        H3(\"Conversion Rate\", cls=combine_classes(text_color.gray._600, font_size.sm)),\n",
-    "                        P(\"3.42%\", cls=combine_classes(font_size._3xl, font_weight.bold, text.orange._600)),\n",
+    "                        P(\"3.42%\", cls=combine_classes(font_size._3xl, font_weight.bold, text_color.orange._600)),\n",
     "                        P(\"↑ 0.8%\", cls=combine_classes(text_color.green._500, font_size.sm)),\n",
     "                        cls=pad(x=6, y=4)\n",
     "                    ),\n",
@@ -685,7 +616,7 @@
     "                ),\n",
     "                \n",
     "                cls=combine_classes(\n",
-    "                    display_tw.grid,\n",
+    "                    grid_display,\n",
     "                    grid_cols(3),\n",
     "                    gap(6),\n",
     "                    m.t(6)\n",
@@ -763,13 +694,13 @@
     "            )\n",
     "        ),\n",
     "        \n",
-    "        cls=combine_classes(display_tw.flex, min_h.screen)\n",
+    "        cls=combine_classes(flex_display, min_h.screen)\n",
     "    )\n",
     "    \n",
     "    return Div(\n",
     "        navbar,\n",
     "        main_layout,\n",
-    "        cls=font.sans\n",
+    "        cls=font_family.sans\n",
     "    )\n",
     "\n",
     "# Start the server\n",
@@ -901,7 +832,7 @@
     "                    bg.gray._300.hover, transition.colors\n",
     "                )),\n",
     "                cls=combine_classes(\n",
-    "                    display_tw.flex,\n",
+    "                    flex_display,\n",
     "                    flex_wrap.wrap,\n",
     "                    gap(3),\n",
     "                    justify.center\n",
@@ -935,7 +866,7 @@
     "                    Div(\n",
     "                        H3(\"Premium Headphones\", cls=combine_classes(font_size.lg, font_weight.semibold)),\n",
     "                        P(\"$199.99\", cls=combine_classes(font_size.xl, font_weight.bold, text_color.blue._600)),\n",
-    "                        cls=combine_classes(display_tw.flex, justify.between, items.start, m.b(2))\n",
+    "                        cls=combine_classes(flex_display, justify.between, items.start, m.b(2))\n",
     "                    ),\n",
     "                    \n",
     "                    # Product description\n",
@@ -946,7 +877,7 @@
     "                    Div(\n",
     "                        Span(\"⭐⭐⭐⭐⭐\", cls=text_color.yellow._400),\n",
     "                        Span(\"(4.8)\", cls=combine_classes(text_color.gray._500, font_size.sm, m.l(2))),\n",
-    "                        cls=combine_classes(display_tw.flex, items.center, m.b(4))\n",
+    "                        cls=combine_classes(flex_display, items.center, m.b(4))\n",
     "                    ),\n",
     "                    \n",
     "                    # Action buttons\n",
@@ -963,7 +894,7 @@
     "                            bg.red._100.hover, text_color.red._600.hover, transition.colors,\n",
     "                            m.l(2)\n",
     "                        )),\n",
-    "                        cls=combine_classes(display_tw.flex, items.center)\n",
+    "                        cls=combine_classes(flex_display, items.center)\n",
     "                    ),\n",
     "                    \n",
     "                    cls=p(6)\n",
@@ -973,7 +904,7 @@
     "                    bg.white, rounded.lg, shadow.md,\n",
     "                    overflow.hidden,\n",
     "                    shadow.xl.hover, transition.shadow,\n",
-    "                    display_tw.flex,\n",
+    "                    flex_display,\n",
     "                    flex_direction.col\n",
     "                )\n",
     "            ),\n",
@@ -1039,7 +970,7 @@
     "                    position.relative,\n",
     "                    shadow._2xl.hover, transition.shadow, shadow_color.amber._400.hover, \n",
     "                    ease._in, duration._500,\n",
-    "                    display_tw.flex,\n",
+    "                    flex_display,\n",
     "                    flex_direction.col\n",
     "                )\n",
     "            ),\n",
@@ -1064,7 +995,7 @@
     "                    Div(\n",
     "                        P(\"$69.99\", cls=combine_classes(font_size.xl, font_weight.bold, text_color.red._600)),\n",
     "                        P(\"$99.99\", cls=combine_classes(font_size.sm, text_color.gray._400, line_through)),\n",
-    "                        cls=combine_classes(display_tw.flex, items.baseline, gap(2), m.b(2))\n",
+    "                        cls=combine_classes(flex_display, items.baseline, gap(2), m.b(2))\n",
     "                    ),\n",
     "                    P(\"Durable backpack with laptop compartment and USB charging port\", \n",
     "                      cls=combine_classes(text_color.gray._600, font_size.sm, m.b(4))),\n",
@@ -1073,7 +1004,7 @@
     "                    Div(\n",
     "                        Div(cls=combine_classes(size(2), bg.green._500, rounded.full)),\n",
     "                        Span(\"In Stock\", cls=combine_classes(font_size.sm, text_color.gray._600)),\n",
-    "                        cls=combine_classes(display_tw.flex, items.center, gap(2), m.b(4))\n",
+    "                        cls=combine_classes(flex_display, items.center, gap(2), m.b(4))\n",
     "                    ),\n",
     "                    \n",
     "                    Button(\"Quick Buy\", cls=combine_classes(\n",
@@ -1091,7 +1022,7 @@
     "                    overflow.hidden,\n",
     "                    position.relative,\n",
     "                    shadow.xl.hover, transition.shadow,\n",
-    "                    display_tw.flex,\n",
+    "                    flex_display,\n",
     "                    flex_direction.col\n",
     "                )\n",
     "            ),\n",
@@ -1122,7 +1053,7 @@
     "                        bg.white, rounded.lg, shadow.md,\n",
     "                        overflow.hidden,\n",
     "                        shadow.xl.hover, transition.shadow,\n",
-    "                        display_tw.flex,\n",
+    "                        flex_display,\n",
     "                        flex_direction.col\n",
     "                    )\n",
     "                ) for i in range(4, 7)\n",
@@ -1172,7 +1103,7 @@
     "                                bg.yellow._300.hover, transition.colors\n",
     "                            )\n",
     "                        ),\n",
-    "                        cls=combine_classes(display_tw.flex, max_w.md, m.x.auto)\n",
+    "                        cls=combine_classes(flex_display, max_w.md, m.x.auto)\n",
     "                    ),\n",
     "                    cls=str(w.full)\n",
     "                ),\n",
