--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -111,92 +111,92 @@
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_imports\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_resources\n",
-    "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> core_resources\n",
     "    core_testing --> utilities_backgrounds\n",
-    "    utilities_accessibility --> utilities_layout\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> core_testing\n",
-    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_borders --> core_base\n",
-    "    utilities_borders --> core_testing\n",
+    "    utilities_backgrounds --> core_base\n",
+    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_backgrounds --> core_testing\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> core_base\n",
-    "    utilities_effects --> core_testing\n",
+    "    utilities_borders --> core_base\n",
+    "    utilities_borders --> core_testing\n",
     "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_base\n",
+    "    utilities_effects --> core_testing\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> core_testing\n",
-    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
-    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_layout --> core_testing\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
+    "    utilities_layout --> core_testing\n",
     "    utilities_sizing --> core_testing\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> core_testing\n",
+    "    utilities_svg --> builders_scales\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> core_testing\n",
-    "    utilities_svg --> builders_colors\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
     "    utilities_tables --> core_base\n",
+    "    utilities_tables --> core_testing\n",
     "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> core_testing\n",
-    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> core_base\n",
+    "    utilities_typography --> core_testing\n",
     "```\n",
     "\n",
     "*91 cross-module dependencies detected*"
@@ -323,6 +323,8 @@
     "from cjm_fasthtml_tailwind.utilities.accessibility import (\n",
     "    FORCED_COLOR_ADJUST_VALUES,\n",
     "    forced_color_adjust,\n",
+    "    sr_only,\n",
+    "    not_sr_only,\n",
     "    test_accessibility_forced_color_adjust_examples,\n",
     "    test_accessibility_screen_reader_examples,\n",
     "    test_accessibility_fasthtml_examples,\n",
@@ -2910,6 +2912,8 @@
     "\n",
     "```python\n",
     "from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import (\n",
+    "    flex_display,\n",
+    "    grid_display,\n",
     "    FLEX_BASIS_CONFIG,\n",
     "    basis,\n",
     "    FLEX_DIRECTION_VALUES,\n",
@@ -2965,6 +2969,9 @@
     "    place_items,\n",
     "    PLACE_SELF_VALUES,\n",
     "    place_self,\n",
+    "    FlexDisplayFactory,\n",
+    "    GridDisplayFactory,\n",
+    "    test_flexbox_and_grid_display_examples,\n",
     "    test_flexbox_and_grid_basis_examples,\n",
     "    test_flexbox_and_grid_direction_examples,\n",
     "    test_flexbox_and_grid_wrap_examples,\n",
@@ -3001,6 +3008,12 @@
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_flexbox_and_grid_display_examples(\n",
+    "): # TODO: Add type hint\n",
+    "    \"Test flex and grid display utilities.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def test_flexbox_and_grid_basis_examples(\n",
@@ -3157,6 +3170,72 @@
     "```\n",
     "\n",
     "#### Classes\n",
+    "\n",
+    "```python\n",
+    "class FlexDisplayFactory:\n",
+    "    def __init__(self):\n",
+    "        \"Initialize with flex display value.\"\n",
+    "        super().__init__(\"flex\", \"Display utility for creating a flex container\")\n",
+    "    \n",
+    "    @property\n",
+    "    def inline(\n",
+    "        self\n",
+    "    ) -> str:  # The 'inline-flex' CSS class\n",
+    "    \"Factory for flex display utilities.\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"Initialize with flex display value.\"\n",
+    "            super().__init__(\"flex\", \"Display utility for creating a flex container\")\n",
+    "        \n",
+    "        @property\n",
+    "        def inline(\n",
+    "            self\n",
+    "        ) -> str:  # The 'inline-flex' CSS class\n",
+    "        \"Initialize with flex display value.\"\n",
+    "    \n",
+    "    def inline(\n",
+    "            self\n",
+    "        ) -> str:  # The 'inline-flex' CSS class\n",
+    "        \"Return the inline-flex utility class.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about this flex display factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "class GridDisplayFactory:\n",
+    "    def __init__(self):\n",
+    "        \"Initialize with grid display value.\"\n",
+    "        super().__init__(\"grid\", \"Display utility for creating a grid container\")\n",
+    "    \n",
+    "    @property\n",
+    "    def inline(\n",
+    "        self\n",
+    "    ) -> str:  # The 'inline-grid' CSS class\n",
+    "    \"Factory for grid display utilities.\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"Initialize with grid display value.\"\n",
+    "            super().__init__(\"grid\", \"Display utility for creating a grid container\")\n",
+    "        \n",
+    "        @property\n",
+    "        def inline(\n",
+    "            self\n",
+    "        ) -> str:  # The 'inline-grid' CSS class\n",
+    "        \"Initialize with grid display value.\"\n",
+    "    \n",
+    "    def inline(\n",
+    "            self\n",
+    "        ) -> str:  # The 'inline-grid' CSS class\n",
+    "        \"Return the inline-grid utility class.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about this grid display factory.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "class GrowFactory:\n",
@@ -3377,6 +3456,8 @@
     "#### Variables\n",
     "\n",
     "```python\n",
+    "flex_display  # The flex display factory\n",
+    "grid_display  # The grid display factory\n",
     "FLEX_BASIS_CONFIG  # Create configuration for flex basis - similar to width/height but with container scales\n",
     "basis  # The flex basis factory\n",
     "FLEX_DIRECTION_VALUES = {4 items}  # Flex direction utilities\n",
@@ -3709,8 +3790,6 @@
     "from cjm_fasthtml_tailwind.utilities.layout import (\n",
     "    DISPLAY_VALUES,\n",
     "    display_tw,\n",
-    "    sr_only,\n",
-    "    not_sr_only,\n",
     "    POSITION_VALUES,\n",
     "    position,\n",
     "    inset,\n",
@@ -4031,8 +4110,8 @@
     "#### Variables\n",
     "\n",
     "```python\n",
-    "DISPLAY_VALUES = {22 items}  # Display utilities\n",
-    "display_tw  # The display factory\n",
+    "DISPLAY_VALUES = {8 items}  # Display utilities for general display types (not flex/grid/table)\n",
+    "display_tw  # The display factory for general display types\n",
     "POSITION_VALUES = {5 items}  # Position utilities\n",
     "position  # The position factory\n",
     "inset  # The inset factory for positioning\n",
@@ -5158,7 +5237,7 @@
     "    from fasthtml.common import Div\n",
     "    from fasthtml.svg import Svg, Path\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap, grid_display, flex_display\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    \n",
     "    # Helper function to create an icon\n",
@@ -5173,7 +5252,7 @@
     "    from fasthtml.svg import Svg, Circle\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, position\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display, flex_display\n",
     "    \n",
     "    # Progress ring component\n",
     "    def ProgressRing(percentage: int, size: int = 120)\n",
@@ -5265,10 +5344,13 @@
     "\n",
     "```python\n",
     "from cjm_fasthtml_tailwind.utilities.tables import (\n",
+    "    table_display,\n",
     "    border_collapse,\n",
     "    border_spacing,\n",
     "    table_layout,\n",
     "    caption_side,\n",
+    "    TableDisplayFactory,\n",
+    "    test_tables_display_examples,\n",
     "    test_tables_border_collapse_examples,\n",
     "    BorderSpacingFactory,\n",
     "    test_tables_border_spacing_basic_examples,\n",
@@ -5284,6 +5366,11 @@
     "```\n",
     "\n",
     "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def test_tables_display_examples()\n",
+    "    \"Test table display utilities.\"\n",
+    "```\n",
     "\n",
     "```python\n",
     "def test_tables_border_collapse_examples()\n",
@@ -5338,6 +5425,79 @@
     "#### Classes\n",
     "\n",
     "```python\n",
+    "class TableDisplayFactory:\n",
+    "    def __init__(self):\n",
+    "        \"Initialize with table display value.\"\n",
+    "        super().__init__(\"table\", \"Display utility for creating a table element\")\n",
+    "    \n",
+    "    @property\n",
+    "    def inline(\n",
+    "        self\n",
+    "    ) -> str:  # The 'inline-table' CSS class\n",
+    "    \"Factory for table display utilities.\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "            \"Initialize with table display value.\"\n",
+    "            super().__init__(\"table\", \"Display utility for creating a table element\")\n",
+    "        \n",
+    "        @property\n",
+    "        def inline(\n",
+    "            self\n",
+    "        ) -> str:  # The 'inline-table' CSS class\n",
+    "        \"Initialize with table display value.\"\n",
+    "    \n",
+    "    def inline(\n",
+    "            self\n",
+    "        ) -> str:  # The 'inline-table' CSS class\n",
+    "        \"Return the inline-table utility class.\"\n",
+    "    \n",
+    "    def caption(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-caption' CSS class\n",
+    "        \"Return the table-caption utility class.\"\n",
+    "    \n",
+    "    def cell(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-cell' CSS class\n",
+    "        \"Return the table-cell utility class.\"\n",
+    "    \n",
+    "    def column(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-column' CSS class\n",
+    "        \"Return the table-column utility class.\"\n",
+    "    \n",
+    "    def column_group(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-column-group' CSS class\n",
+    "        \"Return the table-column-group utility class.\"\n",
+    "    \n",
+    "    def footer_group(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-footer-group' CSS class\n",
+    "        \"Return the table-footer-group utility class.\"\n",
+    "    \n",
+    "    def header_group(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-header-group' CSS class\n",
+    "        \"Return the table-header-group utility class.\"\n",
+    "    \n",
+    "    def row_group(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-row-group' CSS class\n",
+    "        \"Return the table-row-group utility class.\"\n",
+    "    \n",
+    "    def row(\n",
+    "            self\n",
+    "        ) -> str:  # The 'table-row' CSS class\n",
+    "        \"Return the table-row utility class.\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "            self\n",
+    "        ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"Get information about this table display factory.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "class BorderSpacingFactory:\n",
     "    def __init__(self):\n",
     "        \"\"\"Initialize with scaled factories for directional variants.\"\"\"\n",
@@ -5376,6 +5536,7 @@
     "#### Variables\n",
     "\n",
     "```python\n",
+    "table_display  # The table display factory\n",
     "border_spacing  # The border spacing factory\n",
     "```"
    ]
