--- a/nbs/utilities/accessibility.ipynb
+++ b/nbs/utilities/accessibility.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "## Screen Reader Utilities\n",
     "\n",
-    "The `sr-only` and `not-sr-only` utilities are implemented in the layout module since they control visibility. We'll import and re-export them here for convenience."
+    "Utilities for controlling visibility of elements for screen readers vs visual display."
    ]
   },
   {
@@ -119,8 +119,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Import screen reader utilities from layout module\n",
-    "from cjm_fasthtml_tailwind.utilities.layout import sr_only, not_sr_only"
+    "# Screen reader utilities\n",
+    "sr_only = SingleValueFactory(\"sr-only\", \"Hide element visually but keep it available to screen readers\")\n",
+    "not_sr_only = SingleValueFactory(\"not-sr-only\", \"Undo sr-only, making element visible again\")"
    ]
   },
   {
@@ -190,17 +191,15 @@
     "):\n",
     "    \"\"\"Test accessibility utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Span, Input, Label, Nav, A\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left, display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import animate\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, items\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, items, grid_display, flex_display\n",
     "    from cjm_fasthtml_tailwind.core.base import combine_classes\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import sr_only, not_sr_only\n",
-    "    from cjm_fasthtml_tailwind.utilities.accessibility import forced_color_adjust\n",
     "    \n",
     "    # Skip link for keyboard navigation\n",
     "    skip_link = A(\n",
@@ -246,7 +245,7 @@
     "        A(\"Home\", href=\"/\", cls=combine_classes(forced_color_adjust.none, text_color.blue._600)),\n",
     "        A(\"About\", href=\"/about\", cls=combine_classes(forced_color_adjust.none, text_color.blue._600)),\n",
     "        A(\"Contact\", href=\"/contact\", cls=combine_classes(forced_color_adjust.none, text_color.blue._600)),\n",
-    "        cls=combine_classes(forced_color_adjust.auto, display_tw.flex, gap(4))\n",
+    "        cls=combine_classes(forced_color_adjust.auto, flex_display, gap(4))\n",
     "    )\n",
     "    assert high_contrast_nav.attrs['class'] == \"forced-color-adjust-auto flex gap-4\"\n",
     "    assert \"forced-color-adjust-none\" in high_contrast_nav.children[0].attrs['class']\n",
@@ -263,7 +262,7 @@
     "            border_color.t.transparent\n",
     "        )),\n",
     "        Span(\"Loading...\", cls=str(sr_only)),\n",
-    "        cls=combine_classes(display_tw.inline_flex, items.center)\n",
+    "        cls=combine_classes(flex_display.inline, items.center)\n",
     "    )\n",
     "    assert loading_spinner.children[1].attrs['class'] == \"sr-only\"\n",
     "    \n",
@@ -274,7 +273,7 @@
     "        icon_button,\n",
     "        high_contrast_nav,\n",
     "        loading_spinner,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
