--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -1171,8 +1171,8 @@
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import position, display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Card with colored background\n",
     "    card = Div(\n",
@@ -1221,7 +1221,7 @@
     "        card,\n",
     "        hero,\n",
     "        gradient_text,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
