--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -1656,7 +1656,7 @@
     "    from fasthtml.common import Div, Button, Card, Ul, Li, H3, P, Input, Link\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, overflow\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, flex_display, grid_display\n",
     "    from cjm_fasthtml_tailwind.core.base import combine_classes\n",
     "    \n",
     "    # Card with rounded corners and colored border\n",
@@ -1728,7 +1728,7 @@
     "        Button(\"Center\"),\n",
     "        Button(\"Right\"),\n",
     "        cls=combine_classes(\n",
-    "            display_tw.flex,\n",
+    "            flex_display,\n",
     "            divide.x(),\n",
     "            divide_color.gray._400,\n",
     "            border(),\n",
@@ -1900,7 +1900,7 @@
     "        custom_link,\n",
     "        double_border_box,\n",
     "        accessible_container,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
