--- a/nbs/utilities/effects.ipynb
+++ b/nbs/utilities/effects.ipynb
@@ -2691,7 +2691,7 @@
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    \n",
     "    # Card with basic shadow\n",
@@ -2803,7 +2803,7 @@
     "        input_field,\n",
     "        focus_button,\n",
     "        ring_card,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -2902,7 +2902,7 @@
     "    \"\"\"Test composing shadow size and color utilities.\"\"\"\n",
     "    from fasthtml.common import Div\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Small shadow with custom color\n",
     "    example1 = Div(\n",
@@ -2957,7 +2957,7 @@
     "        example2,\n",
     "        example3,\n",
     "        example4,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -3060,7 +3060,7 @@
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Form input with inset shadow\n",
     "    form_input = Input(\n",
@@ -3138,7 +3138,7 @@
     "        inset_ring_card,\n",
     "        layered_card,\n",
     "        no_effects,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -3260,7 +3260,7 @@
     "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Fade out effect with linear gradient mask\n",
     "    fade_out_div = Div(\n",
@@ -3378,7 +3378,7 @@
     "        svg_masked,\n",
     "        pie_mask,\n",
     "        complex_mask,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
