--- a/nbs/utilities/filters.ipynb
+++ b/nbs/utilities/filters.ipynb
@@ -918,7 +918,7 @@
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import position, inset, display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Image with hover blur effect\n",
     "    image_hover = Img(\n",
@@ -1012,7 +1012,7 @@
     "        frosted_glass,\n",
     "        artistic_img,\n",
     "        dark_overlay,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
