--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -59,6 +59,116 @@
   },
   {
    "cell_type": "markdown",
+   "id": "mkgnhk3kjqk",
+   "metadata": {},
+   "source": [
+    "## Display Utilities for Flexbox and Grid\n",
+    "\n",
+    "Essential display utilities for creating flex and grid containers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fgoxsxbvs8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "# Display utilities for flexbox and grid\n",
+    "class FlexDisplayFactory(SingleValueFactory):\n",
+    "    \"\"\"Factory for flex display utilities.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with flex display value.\"\n",
+    "        super().__init__(\"flex\", \"Display utility for creating a flex container\")\n",
+    "    \n",
+    "    @property\n",
+    "    def inline(\n",
+    "        self\n",
+    "    ) -> str:  # The 'inline-flex' CSS class\n",
+    "        \"Return the inline-flex utility class.\"\n",
+    "        return \"inline-flex\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this flex display factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [],\n",
+    "            'options': {\n",
+    "                'base_value': 'flex (display: flex)',\n",
+    "                'special_properties': {\n",
+    "                    'inline': 'Returns \"inline-flex\" for inline flex containers'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "class GridDisplayFactory(SingleValueFactory):\n",
+    "    \"\"\"Factory for grid display utilities.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with grid display value.\"\n",
+    "        super().__init__(\"grid\", \"Display utility for creating a grid container\")\n",
+    "    \n",
+    "    @property\n",
+    "    def inline(\n",
+    "        self\n",
+    "    ) -> str:  # The 'inline-grid' CSS class\n",
+    "        \"Return the inline-grid utility class.\"\n",
+    "        return \"inline-grid\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this grid display factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [],\n",
+    "            'options': {\n",
+    "                'base_value': 'grid (display: grid)',\n",
+    "                'special_properties': {\n",
+    "                    'inline': 'Returns \"inline-grid\" for inline grid containers'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "# Create the display factories\n",
+    "flex_display = FlexDisplayFactory() # The flex display factory\n",
+    "grid_display = GridDisplayFactory() # The grid display factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "zacalb6sh6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
+    "def test_flexbox_and_grid_display_examples(\n",
+    "): # TODO: Add type hint\n",
+    "    \"\"\"Test flex and grid display utilities.\"\"\"\n",
+    "    # Test flex display utilities\n",
+    "    assert str(flex_display) == \"flex\"\n",
+    "    assert flex_display.inline == \"inline-flex\"\n",
+    "    \n",
+    "    # Test grid display utilities\n",
+    "    assert str(grid_display) == \"grid\"\n",
+    "    assert grid_display.inline == \"inline-grid\"\n",
+    "    \n",
+    "    # Test with modifiers\n",
+    "    assert str(flex_display.hover) == \"hover:flex\"\n",
+    "    assert str(flex_display.md) == \"md:flex\"\n",
+    "    assert str(grid_display.lg) == \"lg:grid\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_flexbox_and_grid_display_examples()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a7b873b-3f0c-495d-9247-9271523ae32b",
    "metadata": {},
    "source": [
@@ -1600,7 +1710,6 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flexbox and grid utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Header, Nav, Main, Article, Aside, Footer, Img, Button, H1, H2, P\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_weight, font_size, text_color, text_align\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import h, min_h\n",
@@ -1612,11 +1721,11 @@
     "        Div(\"Logo\", cls=str(font_weight.bold)),\n",
     "        Div(\n",
     "            \"Home\", \"About\", \"Contact\",\n",
-    "            cls=combine_classes(display_tw.flex, gap(4))\n",
+    "            cls=combine_classes(flex_display, gap(4))\n",
     "        ),\n",
     "        Button(\"Sign In\"),\n",
     "        cls=combine_classes(\n",
-    "            display_tw.flex, \n",
+    "            flex_display, \n",
     "            justify.between, \n",
     "            items.center, \n",
     "            p.x(6), \n",
@@ -1629,7 +1738,7 @@
     "    card_grid = Div(\n",
     "        *[Div(f\"Card {i}\", cls=combine_classes(p(4), bg.gray._100, rounded.full)) for i in range(6)],\n",
     "        cls=combine_classes(\n",
-    "            display_tw.grid,\n",
+    "            grid_display,\n",
     "            grid_cols(1),     # 1 column on mobile\n",
     "            grid_cols(2).md, # 2 columns on medium screens\n",
     "            grid_cols(3).lg, # 3 columns on large screens\n",
@@ -1644,7 +1753,7 @@
     "        P(\"Build amazing things\"),\n",
     "        Button(\"Get Started\", cls=str(m.t(4))),\n",
     "        cls=combine_classes(\n",
-    "            display_tw.flex,\n",
+    "            flex_display,\n",
     "            flex_direction.col,\n",
     "            justify.center,\n",
     "            items.center,\n",
@@ -1670,7 +1779,7 @@
     "        Div(\"Stat 2\", cls=combine_classes(p(4), bg.yellow._100)),\n",
     "        \n",
     "        cls=combine_classes(\n",
-    "            display_tw.grid,\n",
+    "            grid_display,\n",
     "            grid_cols(3),\n",
     "            grid_rows(3),\n",
     "            gap(4),\n",
@@ -1684,7 +1793,7 @@
     "        Button(\"Back\", cls=str(shrink(0))),  # Don't shrink\n",
     "        Div(\"Search...\", cls=combine_classes(grow(), p.x(4), bg.gray._100, rounded.full)),  # Take available space\n",
     "        Button(\"Settings\", cls=str(shrink(0))),  # Don't shrink\n",
-    "        cls=combine_classes(display_tw.flex, gap(2), items.center, p(2))\n",
+    "        cls=combine_classes(flex_display, gap(2), items.center, p(2))\n",
     "    )\n",
     "    assert toolbar.attrs['class'] == \"flex gap-2 items-center p-2\"\n",
     "    assert toolbar.children[1].attrs['class'] == \"grow-1 px-4 bg-gray-100 rounded-full\"\n",
@@ -1696,7 +1805,7 @@
     "        hero,\n",
     "        dashboard,\n",
     "        toolbar,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1782,7 +1891,7 @@
     "def flex_center(\n",
     ") -> str:  # Combined CSS classes for centered flex container\n",
     "    \"\"\"Create classes for a flex container that centers its content.\"\"\"\n",
-    "    return combine_classes(\"flex\", justify.center, items.center)"
+    "    return combine_classes(flex_display, justify.center, items.center)"
    ]
   },
   {
@@ -1796,7 +1905,7 @@
     "def flex_between(\n",
     ") -> str:  # Combined CSS classes for flex container with space between\n",
     "    \"\"\"Create classes for a flex container with space between items.\"\"\"\n",
-    "    return combine_classes(\"flex\", justify.between, items.center)"
+    "    return combine_classes(flex_display, justify.between, items.center)"
    ]
   },
   {
@@ -1810,7 +1919,7 @@
     "def flex_col_center(\n",
     ") -> str:  # Combined CSS classes for centered vertical flex container\n",
     "    \"\"\"Create classes for a vertical flex container that centers its content.\"\"\"\n",
-    "    return combine_classes(\"flex\", flex_direction.col, justify.center, items.center)"
+    "    return combine_classes(flex_display, flex_direction.col, justify.center, items.center)"
    ]
   },
   {
@@ -1824,7 +1933,7 @@
     "def grid_center(\n",
     ") -> str:  # Combined CSS classes for centered grid container\n",
     "    \"\"\"Create classes for a grid container that centers its content.\"\"\"\n",
-    "    return combine_classes(\"grid\", place_items.center)"
+    "    return combine_classes(grid_display, place_items.center)"
    ]
   },
   {
@@ -1843,7 +1952,7 @@
     ") -> str:  # Combined CSS classes for responsive grid\n",
     "    \"\"\"Create responsive grid classes with customizable breakpoints.\"\"\"\n",
     "    return combine_classes(\n",
-    "        \"grid\",\n",
+    "        grid_display,\n",
     "        grid_cols(mobile),\n",
     "        f\"md:grid-cols-{tablet}\",\n",
     "        f\"lg:grid-cols-{desktop}\",\n",
@@ -1885,6 +1994,10 @@
     "def test_flexbox_and_grid_factory_documentation(\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
+    "    # Test display factory documentation\n",
+    "    assert flex_display.describe() == \"Display utility for creating a flex container\"\n",
+    "    assert grid_display.describe() == \"Display utility for creating a grid container\"\n",
+    "    \n",
     "    # Test factory documentation\n",
     "    assert basis.describe() == \"Flex basis utilities for controlling the initial size of flex items\"\n",
     "    assert flex_direction.describe() == \"Flex direction utilities for controlling the direction of flex items\"\n",
