--- a/nbs/utilities/interactivity.ipynb
+++ b/nbs/utilities/interactivity.ipynb
@@ -1120,7 +1120,7 @@
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Custom styled checkbox with accent color\n",
     "    checkbox = Input(\n",
@@ -1189,7 +1189,7 @@
     "        text_input,\n",
     "        textarea,\n",
     "        button,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1288,7 +1288,7 @@
     "    \"\"\"Test scroll snap utilities in carousel/gallery components.\"\"\"\n",
     "    from fasthtml.common import Div, Img\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, overflow\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, shrink\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, shrink, grid_display, flex_display\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    \n",
     "    # Horizontal scroll snap container\n",
@@ -1298,7 +1298,7 @@
     "            snap.mandatory,\n",
     "            scroll.smooth,\n",
     "            scroll_p.x(4),\n",
-    "            display_tw.flex,\n",
+    "            flex_display,\n",
     "            overflow.x.auto,\n",
     "            gap(4)\n",
     "        )\n",
@@ -1340,7 +1340,7 @@
     "        carousel_container,\n",
     "        snap_item,\n",
     "        vertical_snap,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1444,7 +1444,7 @@
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Touch-enabled image viewer\n",
     "    image_viewer = Div(\n",
@@ -1509,7 +1509,7 @@
     "        draggable,\n",
     "        code_block,\n",
     "        swipe_area,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
