--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -75,36 +75,18 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "DISPLAY_VALUES = { # Display utilities\n",
+    "DISPLAY_VALUES = { # Display utilities for general display types (not flex/grid/table)\n",
     "    \"inline\": \"inline\",\n",
     "    \"block\": \"block\", \n",
     "    \"inline-block\": \"inline-block\",\n",
     "    \"flow-root\": \"flow-root\",\n",
-    "    \"flex\": \"flex\",\n",
-    "    \"inline-flex\": \"inline-flex\",\n",
-    "    \"grid\": \"grid\",\n",
-    "    \"inline-grid\": \"inline-grid\",\n",
     "    \"contents\": \"contents\",\n",
-    "    \"table\": \"table\",\n",
-    "    \"inline-table\": \"inline-table\",\n",
-    "    \"table-caption\": \"table-caption\",\n",
-    "    \"table-cell\": \"table-cell\",\n",
-    "    \"table-column\": \"table-column\",\n",
-    "    \"table-column-group\": \"table-column-group\",\n",
-    "    \"table-footer-group\": \"table-footer-group\",\n",
-    "    \"table-header-group\": \"table-header-group\",\n",
-    "    \"table-row-group\": \"table-row-group\",\n",
-    "    \"table-row\": \"table-row\",\n",
     "    \"list-item\": \"list-item\",\n",
     "    \"hidden\": \"hidden\",\n",
     "    \"none\": \"none\"\n",
     "}\n",
     "\n",
-    "display_tw = SimpleFactory(DISPLAY_VALUES, \"Display utilities for controlling the display box type of an element\") # The display factory\n",
-    "\n",
-    "# Special display utilities\n",
-    "sr_only = SingleValueFactory(\"sr-only\", \"Hide element visually but keep it available to screen readers\")\n",
-    "not_sr_only = SingleValueFactory(\"not-sr-only\", \"Undo sr-only, making element visible again\")"
+    "display_tw = SimpleFactory(DISPLAY_VALUES, \"Display utilities for controlling the display box type of an element\") # The display factory for general display types"
    ]
   },
   {
@@ -121,19 +103,12 @@
     "    # Test display utilities with dot notation\n",
     "    assert str(display_tw.block) == \"block\"\n",
     "    assert str(display_tw.inline) == \"inline\"\n",
-    "    assert str(display_tw.flex) == \"flex\"\n",
-    "    assert str(display_tw.grid) == \"grid\"\n",
     "    assert str(display_tw.hidden) == \"hidden\"\n",
-    "    assert str(display_tw.inline_flex) == \"inline-flex\"\n",
-    "    \n",
-    "    # Table display utilities\n",
-    "    assert str(display_tw.table) == \"table\"\n",
-    "    assert str(display_tw.table_row) == \"table-row\"\n",
-    "    assert str(display_tw.table_cell) == \"table-cell\"\n",
-    "    \n",
-    "    # Special utilities\n",
-    "    assert str(sr_only) == \"sr-only\"\n",
-    "    assert str(not_sr_only) == \"not-sr-only\"\n",
+    "    assert str(display_tw.inline_block) == \"inline-block\"\n",
+    "    assert str(display_tw.flow_root) == \"flow-root\"\n",
+    "    assert str(display_tw.contents) == \"contents\"\n",
+    "    assert str(display_tw.list_item) == \"list-item\"\n",
+    "    assert str(display_tw.none) == \"none\"\n",
     "\n",
     "# Run the tests\n",
     "test_layout_display_examples()"
@@ -1254,7 +1229,7 @@
     "    from fasthtml.common import Div, Img, Header, Nav, Main, Section, Article, Aside\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import h, w\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap, flex_display, grid_display\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    \n",
     "    # Fixed header with z-index\n",
@@ -1274,7 +1249,7 @@
     "    # Modal overlay with z-index\n",
     "    modal_overlay = Div(\n",
     "        Div(\"Modal content\", cls=combine_classes(position.relative, z(10))),\n",
-    "        cls=combine_classes(position.fixed, inset(0), z(40), display_tw.flex, items.center, justify.center, bg.black.opacity(50))\n",
+    "        cls=combine_classes(position.fixed, inset(0), z(40), flex_display, items.center, justify.center, bg.black.opacity(50))\n",
     "    )\n",
     "    assert modal_overlay.attrs['class'] == \"fixed inset-0 z-40 flex items-center justify-center bg-black/50\"\n",
     "    assert modal_overlay.children[0].attrs['class'] == \"relative z-10\"\n",
@@ -1302,7 +1277,7 @@
     "        modal_overlay,\n",
     "        image_container,\n",
     "        article,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1405,8 +1380,8 @@
     "):\n",
     "    \"\"\"Test enhanced factories with modifier support in practical examples.\"\"\"\n",
     "    from fasthtml.common import Div, Nav, Button, Span\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
+    "    from cjm_fasthtml_tailwind.utilities.accessibility import sr_only\n",
     "    \n",
     "    # Mobile navigation with responsive display\n",
     "    mobile_nav = Nav(\n",
@@ -1467,7 +1442,7 @@
     "        dropdown,\n",
     "        skip_link,\n",
     "        table_container,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1548,7 +1523,7 @@
     "    assert str(display_tw.block) == \"block\"\n",
     "    assert str(display_tw.hidden.hover) == \"hover:hidden\"\n",
     "    assert str(display_tw.block.md) == \"md:block\"\n",
-    "    assert str(display_tw.flex.dark) == \"dark:flex\"\n",
+    "    assert str(display_tw.none.dark) == \"dark:none\"\n",
     "    \n",
     "    # Test position utilities with modifiers (now supported!)\n",
     "    assert str(position.fixed) == \"fixed\"\n",
@@ -1582,11 +1557,6 @@
     "    assert str(clear.both) == \"clear-both\"\n",
     "    assert str(clear.left.md) == \"md:clear-left\"\n",
     "    assert str(clear.none.hover) == \"hover:clear-none\"\n",
-    "    \n",
-    "    # Test SingleValueFactory utilities with modifiers\n",
-    "    assert str(sr_only) == \"sr-only\"\n",
-    "    assert str(sr_only.hover) == \"hover:sr-only\"\n",
-    "    assert str(not_sr_only.focus) == \"focus:not-sr-only\"\n",
     "    \n",
     "    # Test responsive inset\n",
     "    assert str(inset.x(4).sm) == \"sm:inset-x-4\"\n",
@@ -1635,10 +1605,6 @@
     "    assert break_util.describe() == \"Break utilities for controlling column and page breaks\"\n",
     "    assert box_decoration.describe() == \"Box decoration break utilities for controlling element fragment rendering across breaks\"\n",
     "    assert overscroll.describe() == \"Overscroll behavior utilities for controlling browser behavior at scroll boundaries\"\n",
-    "    \n",
-    "    # Test SingleValueFactory documentation\n",
-    "    assert sr_only.describe() == \"Hide element visually but keep it available to screen readers\"\n",
-    "    assert not_sr_only.describe() == \"Undo sr-only, making element visible again\"\n",
     "\n",
     "# Run the tests\n",
     "test_layout_factory_documentation()"
