--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -685,7 +685,7 @@
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, position, object_fit\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import m, p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, flex_display, grid_display\n",
     "    \n",
     "    # Card with constrained width\n",
     "    card = Div(\n",
@@ -713,7 +713,7 @@
     "    layout = Div(\n",
     "        Aside(\"Sidebar\", cls=combine_classes(w(64), min_w(48), h.full)),\n",
     "        Main(\"Main content\", cls=combine_classes(w.full, min_h.screen)),\n",
-    "        cls=str(display_tw.flex)\n",
+    "        cls=str(flex_display)\n",
     "    )\n",
     "    assert layout.children[0].attrs['class'] == \"w-64 min-w-48 h-full\"\n",
     "    assert layout.children[1].attrs['class'] == \"w-full min-h-screen\"\n",
@@ -749,7 +749,7 @@
     "        article,\n",
     "        avatar,\n",
     "        page_container,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
