--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -482,7 +482,7 @@
     "    from fasthtml.common import Div, P, Button, H2\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import max_w\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Card component with padding\n",
     "    card = Div(\n",
@@ -519,7 +519,7 @@
     "        card,\n",
     "        overlap_layout,\n",
     "        centered_container,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
