--- a/nbs/utilities/svg.ipynb
+++ b/nbs/utilities/svg.ipynb
@@ -544,7 +544,7 @@
     "    from fasthtml.svg import Svg, Circle, Rect, G, Path\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Icon with fill color\n",
     "    icon = Svg(\n",
@@ -613,7 +613,7 @@
     "        icon,\n",
     "        circle_svg,\n",
     "        complex_svg,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -721,7 +721,7 @@
     "    from fasthtml.common import Div\n",
     "    from fasthtml.svg import Svg, Path\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap, grid_display, flex_display\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    \n",
     "    # Helper function to create an icon\n",
@@ -765,7 +765,7 @@
     "            viewBox=\"0 0 24 24\",\n",
     "            cls=combine_classes(w(5), h(5))\n",
     "        ),\n",
-    "        cls=combine_classes(display_tw.inline_flex, items.center, justify.center)\n",
+    "        cls=combine_classes(flex_display.inline, items.center, justify.center)\n",
     "    )\n",
     "    path_attrs = check_icon.children[0].children[0].attrs['class']\n",
     "    assert \"fill-none\" in path_attrs\n",
@@ -776,7 +776,7 @@
     "    return Div(\n",
     "        home_icon,\n",
     "        check_icon,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -891,7 +891,7 @@
     "    from fasthtml.svg import Svg, Circle\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, position\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display, flex_display\n",
     "    \n",
     "    # Progress ring component\n",
     "    def ProgressRing(percentage: int, size: int = 120):\n",
@@ -928,7 +928,7 @@
     "                viewBox=f\"0 0 {size} {size}\",\n",
     "                cls=combine_classes(w(32), h(32))\n",
     "            ),\n",
-    "            cls=combine_classes(position.relative, display_tw.inline_flex)\n",
+    "            cls=combine_classes(position.relative, flex_display.inline)\n",
     "        )\n",
     "    \n",
     "    # Test 75% progress\n",
@@ -957,7 +957,7 @@
     "        progress_50,\n",
     "        progress_75,\n",
     "        progress_100,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
