--- a/nbs/utilities/tables.ipynb
+++ b/nbs/utilities/tables.ipynb
@@ -56,6 +56,154 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ebzizsbj0y",
+   "metadata": {},
+   "source": [
+    "## Table Display Utilities\n",
+    "\n",
+    "Display utilities for creating and styling table elements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hwqwd5by1ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "# Table display utilities\n",
+    "class TableDisplayFactory(SingleValueFactory):\n",
+    "    \"\"\"Factory for table display utilities.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"Initialize with table display value.\"\n",
+    "        super().__init__(\"table\", \"Display utility for creating a table element\")\n",
+    "    \n",
+    "    @property\n",
+    "    def inline(\n",
+    "        self\n",
+    "    ) -> str:  # The 'inline-table' CSS class\n",
+    "        \"Return the inline-table utility class.\"\n",
+    "        return \"inline-table\"\n",
+    "    \n",
+    "    @property\n",
+    "    def caption(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-caption' CSS class\n",
+    "        \"Return the table-caption utility class.\"\n",
+    "        return \"table-caption\"\n",
+    "    \n",
+    "    @property\n",
+    "    def cell(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-cell' CSS class\n",
+    "        \"Return the table-cell utility class.\"\n",
+    "        return \"table-cell\"\n",
+    "    \n",
+    "    @property\n",
+    "    def column(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-column' CSS class\n",
+    "        \"Return the table-column utility class.\"\n",
+    "        return \"table-column\"\n",
+    "    \n",
+    "    @property\n",
+    "    def column_group(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-column-group' CSS class\n",
+    "        \"Return the table-column-group utility class.\"\n",
+    "        return \"table-column-group\"\n",
+    "    \n",
+    "    @property\n",
+    "    def footer_group(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-footer-group' CSS class\n",
+    "        \"Return the table-footer-group utility class.\"\n",
+    "        return \"table-footer-group\"\n",
+    "    \n",
+    "    @property\n",
+    "    def header_group(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-header-group' CSS class\n",
+    "        \"Return the table-header-group utility class.\"\n",
+    "        return \"table-header-group\"\n",
+    "    \n",
+    "    @property\n",
+    "    def row_group(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-row-group' CSS class\n",
+    "        \"Return the table-row-group utility class.\"\n",
+    "        return \"table-row-group\"\n",
+    "    \n",
+    "    @property\n",
+    "    def row(\n",
+    "        self\n",
+    "    ) -> str:  # The 'table-row' CSS class\n",
+    "        \"Return the table-row utility class.\"\n",
+    "        return \"table-row\"\n",
+    "    \n",
+    "    def get_info(\n",
+    "        self\n",
+    "    ) -> Dict[str, Any]:  # Dictionary with factory information\n",
+    "        \"\"\"Get information about this table display factory.\"\"\"\n",
+    "        return {\n",
+    "            'description': self._doc,\n",
+    "            'valid_inputs': [],\n",
+    "            'options': {\n",
+    "                'base_value': 'table (display: table)',\n",
+    "                'special_properties': {\n",
+    "                    'inline': 'Returns \"inline-table\" for inline table containers',\n",
+    "                    'caption': 'Returns \"table-caption\" for table caption display',\n",
+    "                    'cell': 'Returns \"table-cell\" for table cell display',\n",
+    "                    'column': 'Returns \"table-column\" for table column display',\n",
+    "                    'column_group': 'Returns \"table-column-group\" for column group display',\n",
+    "                    'footer_group': 'Returns \"table-footer-group\" for footer group display',\n",
+    "                    'header_group': 'Returns \"table-header-group\" for header group display',\n",
+    "                    'row_group': 'Returns \"table-row-group\" for row group display',\n",
+    "                    'row': 'Returns \"table-row\" for table row display'\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "# Create the table display factory\n",
+    "table_display = TableDisplayFactory() # The table display factory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2r0p7mmgiik",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
+    "def test_tables_display_examples():\n",
+    "    \"\"\"Test table display utilities.\"\"\"\n",
+    "    # Basic table display\n",
+    "    assert str(table_display) == \"table\"\n",
+    "    assert table_display.inline == \"inline-table\"\n",
+    "    \n",
+    "    # Table element display types\n",
+    "    assert table_display.caption == \"table-caption\"\n",
+    "    assert table_display.cell == \"table-cell\"\n",
+    "    assert table_display.column == \"table-column\"\n",
+    "    assert table_display.column_group == \"table-column-group\"\n",
+    "    assert table_display.footer_group == \"table-footer-group\"\n",
+    "    assert table_display.header_group == \"table-header-group\"\n",
+    "    assert table_display.row_group == \"table-row-group\"\n",
+    "    assert table_display.row == \"table-row\"\n",
+    "    \n",
+    "    # Test with modifiers\n",
+    "    assert str(table_display.hover) == \"hover:table\"\n",
+    "    assert str(table_display.md) == \"md:table\"\n",
+    "\n",
+    "# Run the tests\n",
+    "test_tables_display_examples()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "49df0d8b-5559-4e35-a6cb-ccf5e207ee52",
    "metadata": {},
    "source": [
@@ -527,8 +675,7 @@
     "    \"\"\"Test table utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Table, Thead, Tbody, Tr, Th, Td, Caption, Div\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import w, min_w\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Basic table with collapsed borders\n",
     "    basic_table = Table(\n",
@@ -643,7 +790,7 @@
     "        custom_spaced_table,\n",
     "        fixed_table,\n",
     "        auto_table,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -817,9 +964,9 @@
     "    from cjm_fasthtml_tailwind.utilities.borders import border, border_color, rounded\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, font_family, font_weight, text_color, text_align\n",
     "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
-    "    from cjm_fasthtml_tailwind.utilities.layout import overflow, display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import overflow\n",
     "    from cjm_fasthtml_tailwind.utilities.effects import shadow\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Create a styled data table\n",
     "    data_table = Div(\n",
@@ -919,7 +1066,7 @@
     "    return Div(\n",
     "        data_table,\n",
     "        compact_table,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the test\n",
@@ -1004,6 +1151,9 @@
     "#| export\n",
     "def test_tables_factory_documentation():\n",
     "    \"\"\"Test that table factories have accessible documentation.\"\"\"\n",
+    "    # Test table display factory\n",
+    "    assert table_display.describe() == \"Display utility for creating a table element\"\n",
+    "    \n",
     "    # Test border collapse factory\n",
     "    assert border_collapse.describe() == \"Border collapse utilities for controlling whether table borders should collapse or be separated\"\n",
     "    \n",
@@ -1017,6 +1167,11 @@
     "    assert caption_side.describe() == \"Caption side utilities for controlling the alignment of a caption element inside of a table\"\n",
     "    \n",
     "    # Test get_info methods\n",
+    "    display_info = table_display.get_info()\n",
+    "    assert 'inline' in display_info['options']['special_properties']\n",
+    "    assert 'caption' in display_info['options']['special_properties']\n",
+    "    assert 'cell' in display_info['options']['special_properties']\n",
+    "    \n",
     "    collapse_info = border_collapse.get_info()\n",
     "    assert 'collapse' in collapse_info['options']['available_values']\n",
     "    assert 'separate' in collapse_info['options']['available_values']\n",
