--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -1282,7 +1282,7 @@
     "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.sizing import h, w\n",
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Hover effect with scale and rotate\n",
     "    hover_button = Button(\n",
@@ -1371,7 +1371,7 @@
     "        skewed_divider,\n",
     "        parallax_element,\n",
     "        cube,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the test\n",
