--- a/nbs/utilities/transitions_and_animation.ipynb
+++ b/nbs/utilities/transitions_and_animation.ipynb
@@ -806,7 +806,7 @@
     "    from cjm_fasthtml_tailwind.utilities.effects import opacity\n",
     "    from cjm_fasthtml_tailwind.utilities.transforms import transform\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Button with hover transition\n",
     "    button = Button(\n",
@@ -878,7 +878,7 @@
     "        scale_div,\n",
     "        delayed_link,\n",
     "        multi_transition,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -982,8 +982,8 @@
     "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import position, top, right, display_tw\n",
     "    from cjm_fasthtml_tailwind.utilities.typography import font_size, text_color\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
-    "    \n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
+    "    grid_display\n",
     "    # Loading spinner\n",
     "    spinner = Div(\n",
     "        cls=combine_classes(\n",
@@ -1047,7 +1047,7 @@
     "        arrow,\n",
     "        custom_animated,\n",
     "        var_animated,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1147,7 +1147,7 @@
     "    from cjm_fasthtml_tailwind.utilities.transforms import scale_tw, translate, transform\n",
     "    from cjm_fasthtml_tailwind.utilities.effects import shadow, opacity\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Complete transition setup\n",
     "    interactive_element = Button(\n",
@@ -1201,7 +1201,7 @@
     "        interactive_element,\n",
     "        multi_property,\n",
     "        animated_transitional,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
@@ -1327,64 +1327,6 @@
     "\n",
     "# Run the tests\n",
     "test_transitions_and_animation_factory_documentation()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "310a1796-6f85-410d-a4f8-f1e01e40fc6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script>\n",
-       "document.body.addEventListener('htmx:configRequest', (event) => {\n",
-       "    if(event.detail.path.includes('://')) return;\n",
-       "    htmx.config.selfRequestsOnly=false;\n",
-       "    event.detail.path = `${location.protocol}//${location.hostname}:8000${event.detail.path}`;\n",
-       "});\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
-       "        let frame = this;\n",
-       "        window.addEventListener('message', function(e) {\n",
-       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
-       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
-       "        }, false);\n",
-       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#| eval: false\n",
-    "#| output: false\n",
-    "test_func = test_transitions_and_animation_composition_fasthtml_examples\n",
-    "app, rt = create_test_app()\n",
-    "\n",
-    "@rt\n",
-    "def index():\n",
-    "    return create_test_page(test_func.__doc__.title().replace('.', ''), test_func())\n",
-    "server = start_test_server(app)\n",
-    "display(HTMX())\n",
-    "server.stop()"
    ]
   },
   {
