--- a/nbs/utilities/typography.ipynb
+++ b/nbs/utilities/typography.ipynb
@@ -1750,7 +1750,7 @@
     "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
     "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
     "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
-    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, grid_display\n",
     "    \n",
     "    # Heading with multiple typography utilities\n",
     "    heading = H1(\n",
@@ -1877,7 +1877,7 @@
     "        custom_list,\n",
     "        transformed,\n",
     "        quote,\n",
-    "        cls=combine_classes(display_tw.grid, gap(5))\n",
+    "        cls=combine_classes(grid_display, gap(5))\n",
     "    )\n",
     "\n",
     "# Run the tests\n",
